--- a/css/main.css
+++ b/css/main.css
@@ -653,9 +653,9 @@ video {
   margin-bottom: 2rem;
 }
 
-.mx-8 {
-  margin-left: 2rem;
-  margin-right: 2rem;
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 
 .mb-10 {
@@ -694,6 +694,10 @@ video {
   margin-left: 6rem;
 }
 
+.mr-0 {
+  margin-right: 0px;
+}
+
 .mr-12 {
   margin-right: 3rem;
 }
@@ -726,12 +730,12 @@ video {
   margin-top: -20px;
 }
 
-.mr-0 {
-  margin-right: 0px;
-}
-
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -830,8 +834,20 @@ video {
   width: 100%;
 }
 
-.w-1\/4 {
-  width: 25%;
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[320px\] {
+  width: 320px;
+}
+
+.w-\[340px\] {
+  width: 340px;
+}
+
+.w-\[330px\] {
+  width: 330px;
 }
 
 .max-w-full {
@@ -1514,6 +1530,15 @@ video {
     margin-bottom: 2rem;
   }
 
+  .sm\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
   .sm\:h-64 {
     height: 16rem;
   }
@@ -1528,6 +1553,10 @@ video {
 
   .sm\:w-\[320px\] {
     width: 320px;
+  }
+
+  .sm\:w-\[340px\] {
+    width: 340px;
   }
 
   .sm\:columns-2 {
@@ -1574,14 +1603,14 @@ video {
     z-index: auto;
   }
 
-  .md\:my-0 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
   .md\:mx-8 {
     margin-left: 2rem;
     margin-right: 2rem;
+  }
+
+  .md\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .md\:mb-0 {
@@ -1606,26 +1635,6 @@ video {
 
   .md\:h-48 {
     height: 12rem;
-  }
-
-  .md\:h-24 {
-    height: 6rem;
-  }
-
-  .md\:h-32 {
-    height: 8rem;
-  }
-
-  .md\:h-\[160px\] {
-    height: 160px;
-  }
-
-  .md\:h-\[180px\] {
-    height: 180px;
-  }
-
-  .md\:h-\[170px\] {
-    height: 170px;
   }
 
   .md\:w-1\/4 {
@@ -1772,14 +1781,6 @@ video {
 
   .lg\:w-48 {
     width: 12rem;
-  }
-
-  .lg\:w-\[520px\] {
-    width: 520px;
-  }
-
-  .lg\:w-\[550px\] {
-    width: 550px;
   }
 
   .lg\:w-\[560px\] {
