--- a/css/main.css
+++ b/css/main.css
@@ -653,6 +653,11 @@ video {
   margin-bottom: 2rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -725,6 +730,18 @@ video {
   margin-top: -20px;
 }
 
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.ml-12 {
+  margin-left: 3rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
+}
+
 .block {
   display: block;
 }
@@ -777,6 +794,10 @@ video {
   height: 16rem;
 }
 
+.h-72 {
+  height: 18rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -787,10 +808,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-72 {
-  height: 18rem;
 }
 
 .w-3 {
@@ -864,6 +881,10 @@ video {
 .columns-1 {
   -moz-columns: 1;
        columns: 1;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-row {
