--- a/css/main.css
+++ b/css/main.css
@@ -594,8 +594,16 @@ video {
   top: 80px;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
 .z-\[1\] {
   z-index: 1;
+}
+
+.float-right {
+  float: right;
 }
 
 .mx-2 {
@@ -740,6 +748,18 @@ video {
 
 .ml-20 {
   margin-left: 5rem;
+}
+
+.mr-48 {
+  margin-right: 12rem;
+}
+
+.mr-96 {
+  margin-right: 24rem;
+}
+
+.mr-auto {
+  margin-right: auto;
 }
 
 .block {
@@ -907,6 +927,10 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -956,6 +980,24 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-12 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(3rem * var(--tw-space-x-reverse));
+  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .rounded-2xl {
@@ -1662,6 +1704,10 @@ video {
 
   .md\:items-center {
     align-items: center;
+  }
+
+  .md\:justify-end {
+    justify-content: flex-end;
   }
 
   .md\:justify-between {
